--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -42,3 +42,9 @@
     background-color: #e2e2e2;
     border: none;
 }
+.explore_menu_list_item .active{
+    border: 12px solid tomato;
+    border-radius: 24% 76% 35% 65% / 73% 27% 73% 27%  ;
+    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+    padding: 5px;
+}
