--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -48,3 +48,10 @@
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     padding: 2px;
 }
+@media (max-width:1050px) {
+    .explore_menu_text{
+        max-width: 100%;
+        font-size: 14px;
+    }
+    
+}
