--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -51,6 +51,39 @@
     top: -8px;
     right: -8px;
 }
+.navbar_profile{
+    position: relative;
+}
+.nav_profile_dropdown{
+    position: absolute;
+    display: none;
+    right: -100px;
+    z-index: 1;
+    animation: fadeIn 1s;
+}
+.navbar_profile:hover .nav_profile_dropdown{
+display: flex;
+flex-direction: column;
+gap: 10px;
+background-color: #fff2ef;
+padding: 12px 25px;
+border-radius: 4px;
+border: 1px solid tomato;
+outline: 2px solid white;
+list-style: none;
+}
+.nav_profile_dropdown li{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+.nav_profile_dropdown img{
+    width: 20px;
+}
+.nav_profile_dropdown li:hover{
+    color: tomato;
+}
 @media (max-width:1050px){
 .navbar .logo{
     width: 140px;
