--- a/frontend/src/Pages/Cart/Cart.css
+++ b/frontend/src/Pages/Cart/Cart.css
@@ -22,6 +22,16 @@
 }
 .cart_items_item .cross{
     cursor: pointer;
+    width: 25px;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    transition: all 0.3s;
+}
+.cart_items_item .cross:hover{
+background: tomato;
+color: white;
 }
 .cart_bottom{
     margin-top: 80px;
