--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
     top: 0;
     z-index: 1;
     background-color: white;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 .scrollTop{
     position: fixed;
