--- a/frontend/src/Components/FoodItem/FoodItem.css
+++ b/frontend/src/Components/FoodItem/FoodItem.css
@@ -2,10 +2,12 @@
     width: 100%;
     margin: auto;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px #00000015;
+    box-shadow: rgba(255, 77, 0, 0.4) 0px 2px 4px, rgba(255, 85, 0, 0.3) 0px 7px 13px -3px, rgba(255, 85, 0, 0.2) 0px -3px 0px inset;
     transition: 0.3;
     animation: fadeIn 1s;
     overflow: hidden; 
+    border-bottom: 1px ridge tomato;
+  
 }
 .food_item_image{
     width: 100%;
