--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,15 @@
 }
 body{
   min-height: 100vh;
+  color: black;
+  background-color: white;
 }
+body .dark {
+ color: white;
+ background-color: #222831;
+}
+
+
 a{
   text-decoration: none;
   color: inherit;
