--- a/frontend/src/Pages/MyOrders/MyOrders.css
+++ b/frontend/src/Pages/MyOrders/MyOrders.css
@@ -1,11 +1,13 @@
 .my_orders{
     margin: 50px 0px;
+    min-height: 80vh;
 }
 .my_orders .container{
     display: flex;
     flex-direction:column;
     gap: 20px;
     margin-top:30px;
+  
 }
 .my_orders_order{
     display: grid;
@@ -17,6 +19,9 @@
     color: #454545;
     border: 1px solid tomato;
 }
+.dark .my_orders_order{
+    color: white;
+}
 .my_orders_order img{
     width: 50px;
 }
@@ -27,13 +32,22 @@
     font-weight: 500;
     color: #454545;
 }
+.dark .my_orders_order p b{
+    color: white;
+}
 .my_orders_order button{
     border: none;
     padding: 12px 0px;
     border-radius: 4px;
-    background-color: #ffe1e1;
+    background-color: tomato;
     cursor: pointer;
-    color: #454545;
+    color: #000000;
+    font-weight: 600;
+}
+.dark .my_orders_order button{
+    color: #ffffff;
+    background: tomato;
+    font-weight: 600;
 }
 @media (max-width:900px) {
     .my_orders_order{
