--- a/frontend/src/Components/LoginPopUp/LoginPopUp.css
+++ b/frontend/src/Components/LoginPopUp/LoginPopUp.css
@@ -3,8 +3,11 @@
     z-index: 2;
     width: 100%;
     height: 100%;
-    background-color: #00000090;
+    background-color: #00000090!important;
     display: grid;
+}
+.dark .login_popup{
+    background-color: #22283190!important;
 }
 .login_popup_container{
     place-self:center;
@@ -19,11 +22,18 @@
     font-size: 14px;
     animation: fadeIn 0.5s;
 }
+.dark .login_popup_container{
+    background-color:#222831;
+    color: #ffffff;
+}
 .login_popup_title{
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
+}
+.dark .login_popup_title{
+    color: white;
 }
 .login_popup_title img{
     width: 16px;
