--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -47,12 +47,17 @@
 .navbar button {
   background-color: transparent;
   font-size: 16px;
+  font-weight: 600;
   color: #49557e;
   border: 1px solid tomato;
   padding: 10px 30px;
   border-radius: 50px;
   cursor: pointer;
   transition: 0.3s;
+}
+.dark .navbar button{
+  color: #000000;
+  background-color: #ffffff;
 }
 .navbar button:hover {
   background-color: #fff4f2;
