--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -49,11 +49,15 @@
     border: none;
 }
 .explore_menu_list_item .active{
+   filter: drop-shadow(0px 0px 5px tomato);
+   border: 5px dashed tomato;
+}
+/* .explore_menu_list_item .active{
     border: 10px ridge tomato;
     border-radius: 24% 76% 35% 65% / 73% 27% 73% 27%  ;
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     padding: 2px;
-}
+} */
 @media (max-width:1050px) {
     .explore_menu_text{
         max-width: 100%;
