--- a/frontend/src/Components/LoginPopUp/LoginPopUp.css
+++ b/frontend/src/Components/LoginPopUp/LoginPopUp.css
@@ -56,7 +56,7 @@
     border: none;
     border-radius: 4px;
     color: white;
-    background-color: tomato;
+    background-color: #ff6347;
     font-size: 15px;
     cursor: pointer;
 }
