--- a/frontend/src/Components/videos/Video.css
+++ b/frontend/src/Components/videos/Video.css
@@ -9,7 +9,9 @@
     object-fit: cover;
     border-radius: 3rem;
     border: 5px dotted tomato;
-    padding: 15px;
+    padding: 5px;
+  }
+  .dark .vid_1 video{
     filter: drop-shadow(0px 0px 10px tomato);
   }
   
