--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -49,9 +49,11 @@
     border: none;
 }
 .explore_menu_list_item .active{
-   filter: drop-shadow(0px 0px 5px tomato);
    border: 5px dashed tomato;
    padding: 5px;
+}
+.dark .explore_menu_list_item .active{
+    filter: drop-shadow(0px 0px 5px tomato);
 }
 /* .explore_menu_list_item .active{
     border: 10px ridge tomato;
