--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -26,6 +26,9 @@
 .navbar .logo {
   width: 150px;
 }
+.dark .navbar .logo{
+  filter: drop-shadow(0px 0px 10px tomato);
+}
 .navbar_menu {
   display: flex;
   list-style: none;
