--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -18,7 +18,7 @@
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
   border-bottom-left-radius: 100%;
-  border: 5px ridge tomato;
+  border: 5px ridge #ff6347;
   cursor: pointer;
 }
 
