--- a/frontend/src/Components/AppDownload/AppDownload.css
+++ b/frontend/src/Components/AppDownload/AppDownload.css
@@ -1,36 +1,131 @@
-.app_download{
-    margin: auto auto;
-    margin-top: 100px;
-    font-size: max(3vw,20px);
-    text-align: center;
-    font-weight: 500;
+.app_download_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  row-gap: 5rem;
+  margin: auto auto;
+  margin-top: 100px;
+  text-align: center;
+  font-weight: 500;
+  font-size: max(3vw, 20px);
 }
-.app_download_platforms{
-    display: flex;
-    justify-content: center;
-    gap: max(2vw,10px);
-    margin-top: 40px;
+
+.app_download_content {
+  text-align: center;
 }
-.app_download_platforms img{
-    width: max(30vw,120px);
-    max-width: 180px;
-    transition: 0.5s;
-    cursor: pointer;
+
+.app_download_platforms {
+  display: flex;
+  justify-content: center;
+  gap: max(2vw, 10px);
+  margin-top: 40px;
 }
-.img_mobile{
-    filter: drop-shadow(0 0 0.75rem tomato);
+
+.app_download_platforms img {
+  width: max(30vw, 120px);
+  max-width: 180px;
+  transition: 0.5s;
+  cursor: pointer;
 }
-.img_mobile:hover{
-    transform: scale(1.05);
-    transition: 0.5s;
-    filter: none;
-    /* filter: drop-shadow(0 0 0.75rem tomato); */
+
+.img_mobile {
+  filter: drop-shadow(0 0 0.75rem tomato);
+  margin-top: 10px;
+  transition: 0.5s;
 }
-.app_download_platforms img:hover{
-transform: scale(1.05);
+
+.img_mobile:hover {
+  transform: scale(1.05);
+  filter: none;
 }
-.dark .app_download_platforms img{
-    filter: drop-shadow(2px 2px 2px  white);
-    border: 1px ridge white;
-    border-radius: 1rem;
+
+.app_download_platforms img:hover {
+  transform: scale(1.05);
+}
+
+.app_download_video {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  border-radius: 1rem;
+  padding: 5px;
+  background: tomato;
+  overflow: hidden;
+}
+.dark .app_download_video video {
+  filter: drop-shadow(0px 0px 10px tomato);
+}
+.dark .app_download_video::before {
+  animation: bg-spin 3s linear infinite;
+  border: none;
+}
+
+.app_download_video::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 1rem;
+  padding: 10px;
+  border: 5px solid transparent;
+  background: conic-gradient(
+      from var(--border-angle),
+      transparent 25%,
+      #393e46,
+      #393e46 99%,
+      transparent
+    )
+    border-box;
+  z-index: 1;
+  pointer-events: none;
+  animation: bg-spin 3s linear infinite;
+}
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 2turn;
+}
+.app_download_video::before {
+  animation: none;
+  border: 10px dashed #ffffff;
+}
+
+.app_download_video video {
+  position: relative;
+  z-index: 2;
+  border-radius: 1rem;
+  width: 100%;
+  height: auto;
+}
+
+@keyframes bg-spin {
+  to {
+    --border-angle: 1turn;
+  }
+}
+
+@media (min-width: 1206px) {
+  .app_download_container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .app_download_content {
+    flex: 1;
+  }
+
+  .app_download_video {
+    flex: 1;
+    margin-top: 0;
+    padding-left: 20px;
+  }
+}
+
+.dark .app_download_platforms img {
+  filter: drop-shadow(2px 2px 2px white);
+  border: 1px ridge white;
+  border-radius: 1rem;
 }
