--- a/frontend/src/Components/FoodItem/FoodItem.css
+++ b/frontend/src/Components/FoodItem/FoodItem.css
@@ -1,84 +1,87 @@
-.food_item{
-    width: 100%;
-    margin: auto;
-    border-radius: 15px;
-    transition: 0.3;
-    animation: fadeIn 1s;
-    overflow: hidden; 
-    border: 5px dotted tomato;
+.food_item {
+  width: 100%;
+  margin: auto;
+  border-radius: 15px;
+  transition: 0.3;
+  animation: fadeIn 1s;
+  overflow: hidden;
+  border: 3px dashed tomato;
 }
-.dark .food_item{
-      box-shadow: rgba(255, 77, 0, 0.4) 0px 0px 10px, rgba(255, 85, 0, 0.3) 0px 7px 13px -3px, rgba(255, 85, 0, 0.2) 0px -3px 0px inset;
+.dark .food_item {
+  box-shadow: rgba(255, 77, 0, 0.4) 0px 0px 10px,
+    rgba(255, 85, 0, 0.3) 0px 7px 13px -3px,
+    rgba(255, 85, 0, 0.2) 0px -3px 0px inset;
+  border: 3px dotted tomato;
 }
-.dark .no_id{
-    color: black;
+.dark .no_id {
+  color: black;
 }
-.food_item_image{
-    width: 100%;
-    border-radius: 15px 15px 0px 0px;
+.food_item_image {
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
 }
-.food_item_image:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
+.food_item_image:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
-.food_item_info{
-    padding: 20px;
+.food_item_info {
+  padding: 20px;
 }
-.food_item_name_rating{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+.food_item_name_rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
-.food_item_name_rating p{
-    font-size: 18px;
-    font-weight: 500;
+.food_item_name_rating p {
+  font-size: 18px;
+  font-weight: 500;
 }
-.food_item_name_rating img{
-    width: 70px;
+.food_item_name_rating img {
+  width: 70px;
 }
-.food_item_desc{
-    color: #676767;
-    font-size: 12px;
+.food_item_desc {
+  color: #676767;
+  font-size: 12px;
 }
-.dark .food_item_desc{
-    color: white;
+.dark .food_item_desc {
+  color: white;
 }
-.food_item_desc .dark{
-    color: white;
+.food_item_desc .dark {
+  color: white;
 }
-.food_item_price{
-    color: tomato;
-    font-size: 22px;
-    font-weight: 500;
-    margin: 10px 0px;
+.food_item_price {
+  color: tomato;
+  font-size: 22px;
+  font-weight: 500;
+  margin: 10px 0px;
 }
-.food_item_img_container{
-    position: relative;
+.food_item_img_container {
+  position: relative;
 }
-.food_item_img_container .add{
-    width: 35px;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    cursor: pointer;
-    border-radius: 50%;
-    animation: fadeIn 1s;
+.food_item_img_container .add {
+  width: 35px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  cursor: pointer;
+  border-radius: 50%;
+  animation: fadeIn 1s;
 }
-.food_item_counter{
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 6px;
-    border-radius: 50px;
-    background-color: white;
+.food_item_counter {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 6px;
+  border-radius: 50px;
+  background-color: white;
 }
 
-.food_item_counter img{
-    width: 30px;
-    cursor: pointer;
-    animation: fadeIn 1s;
+.food_item_counter img {
+  width: 30px;
+  cursor: pointer;
+  animation: fadeIn 1s;
 }
