--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -191,9 +191,16 @@
     padding: 40px 0 0 10px;
     border-top-left-radius:1rem;
     border-bottom-left-radius:1rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
   }
   .navbar .active{
     border-bottom: 3px solid tomato;
+  }
+  .menu .active{
+    background: #000;
   }
  
   .navbar_menu.active{
