--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -7,6 +7,15 @@
 .navbar .logo{
     width: max(10%,80px);
 }
+.dark .navbar .logo{
+    filter: drop-shadow(0px 0px 10px tomato);
+}
+.dark .fa-user-tie{
+    filter: drop-shadow(0px 0px 10px tomato);
+}
 .navbar .profile{
     width: 40px;
+}
+.navbar h3{
+    text-transform: uppercase;
 }
