--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -7,6 +7,13 @@
 .navbar .logo{
     width: max(10%,80px);
 }
+.profile{
+    background:tomato;
+    border-radius: 50%;
+}
+.dark .profile{
+    filter: drop-shadow(0px 0px 10px tomato);
+}
 .dark .navbar .logo{
     filter: drop-shadow(0px 0px 10px tomato);
 }
