--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     width: max(10%,80px);
 }
 .profile{
-    background:tomato;
+    background:#ff6347;
     border-radius: 50%;
 }
 .dark .profile{
