--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -49,7 +49,7 @@
   font-size: 16px;
   font-weight: 600;
   color: #49557e;
-  border: 1px solid tomato;
+  border: 1px solid #ff6347;
   padding: 10px 30px;
   border-radius: 50px;
   cursor: pointer;
