--- a/frontend/src/Loader/Loader.css
+++ b/frontend/src/Loader/Loader.css
@@ -25,7 +25,7 @@
     content: '';
     width: 100%;
     height: 100%;
-    background: #f08080;
+    background: tomato;
     position: absolute;
     top: 0;
     left: 0;
